--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/Macinto5h/vogel-sorter"
 [tool.poetry.dependencies]
 python = "^3.8"
 pytest = "^7.1.2"
+pytest-mock = "^3.7.0"
 
 [tool.poetry.dev-dependencies]
 
