--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/Macinto5h/vogel-sorter"
 python = "^3.8"
 pytest = "^7.1.2"
 pytest-mock = "^3.7.0"
+pytest-cov = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 
