--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.8"
 pytest = "^7.1.2"
 pytest-mock = "^3.7.0"
 pytest-cov = "^3.0.0"
+pylint = "^2.13.9"
 
 [tool.poetry.dev-dependencies]
 
