--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "vogel-sorter"
-version = "0.1.0"
+version = "0.2.0"
 description = "Visually demonstrates the function of sorting algorithms using Vogel's Model."
 authors = ["Macallan Camara <44030647+Macinto5h@users.noreply.github.com>"]
 license = "MIT"
@@ -13,6 +13,7 @@ pytest = "^7.1.2"
 pytest-mock = "^3.7.0"
 pytest-cov = "^3.0.0"
 pylint = "^2.13.9"
+chancepy = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 
