--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ chancepy = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.scripts]
+start = "vogel_sorter.vogel_cli:cli"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
