--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ chancepy = "^0.1.3"
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.scripts]
-start = "snflwr.vogel_cli:cli"
+start = "snflwr.cli:cli"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
