--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "snflwr"
+name = "snflwrpy"
 version = "1.0.0"
 description = "Visually demonstrates the function of sorting algorithms using Vogel's Fibonacci model."
 authors = ["Macallan Camara <44030647+Macinto5h@users.noreply.github.com>"]
@@ -10,7 +10,6 @@ repository = "https://github.com/Macinto5h/vogel-sorter"
 [tool.poetry.dependencies]
 python = "^3.8"
 pytest = "^7.1.2"
-pytest-mock = "^3.7.0"
 pytest-cov = "^3.0.0"
 pylint = "^2.13.9"
 chancepy = "^0.1.3"
@@ -18,7 +17,7 @@ chancepy = "^0.1.3"
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.scripts]
-start = "snflwr.cli:cli"
+start = "snflwrpy.cli:cli"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
