--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 pylint = "^2.13.9"
 chancepy = "^0.1.3"
+pytest-mock = "^3.9.0"
 
 [tool.poetry.dev-dependencies]
 
