--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "vogel-sorter"
-version = "0.2.0"
-description = "Visually demonstrates the function of sorting algorithms using Vogel's Model."
+name = "snflwrpy"
+version = "1.0.0"
+description = "Visually demonstrates the function of sorting algorithms using Vogel's Fibonacci model."
 authors = ["Macallan Camara <44030647+Macinto5h@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
@@ -10,15 +10,15 @@ repository = "https://github.com/Macinto5h/vogel-sorter"
 [tool.poetry.dependencies]
 python = "^3.8"
 pytest = "^7.1.2"
-pytest-mock = "^3.7.0"
 pytest-cov = "^3.0.0"
 pylint = "^2.13.9"
 chancepy = "^0.1.3"
+pytest-mock = "^3.9.0"
 
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.scripts]
-start = "vogel_sorter.vogel_cli:cli"
+start = "snflwrpy.cli:cli"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
