--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Visually demonstrates the function of sorting algorithms using Vo
 authors = ["Macallan Camara <44030647+Macinto5h@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/Macinto5h/vogel-sorter"
+repository = "https://github.com/Macinto5h/snflwrpy"
 
 [tool.poetry.dependencies]
 python = "^3.8"
